force-app/main/default/objects/POC_Request__c/POC_Request__c.object-meta.xml
<CustomObject>
    <label>POC Requests</label>
    <nameField>
        <label>POC Requestor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>POC Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>