force-app/main/default/objects/POC_Request__c/fields/Access_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Access_End_Date__c</fullName>
    <label>Access End Date</label>
    <type>Date</type>
</CustomField>