force-app/main/default/objects/POC_Request__c/fields/Access_Location__c.field-meta.xml
<CustomField>
    <fullName>Access_Location__c</fullName>
    <label>Access Location</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APAC (Asia Pacific)</fullName>
            </value>
            <value>
                <fullName>NALA (North America &amp; Latin America)</fullName>
            </value>
            <value>
                <fullName>EMEA (Europe, Middle East &amp; Africa)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>