force-app/main/default/objects/POC_Request__c/fields/Access_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Access_Start_Date__c</fullName>
    <label>Access Start Date</label>
    <type>Date</type>
</CustomField>