force-app/main/default/objects/POC_Request__c/fields/Additional_Notes_Omniverse__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes_Omniverse__c</fullName>
    <label>Additional Notes (Omniverse)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>