force-app/main/default/objects/POC_Request__c/fields/Assigned_to_Technical_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_Technical_Engineer__c</fullName>
    <label>Assigned to Technical Engineer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>David Sun</fullName>
            </value>
            <value>
                <fullName>Sunny Sehmi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>