force-app/main/default/objects/POC_Request__c/fields/CPU__c.field-meta.xml
<CustomField>
    <fullName>CPU__c</fullName>
    <label>CPU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>