force-app/main/default/objects/POC_Request__c/fields/Customer_Industry__c.field-meta.xml
<CustomField>
    <fullName>Customer_Industry__c</fullName>
    <label>Customer Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AEC</fullName>
            </value>
            <value>
                <fullName>MFG</fullName>
            </value>
            <value>
                <fullName>M&amp;E</fullName>
            </value>
            <value>
                <fullName>FSI</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>