force-app/main/default/objects/POC_Request__c/fields/Dependent_POC_Product_Workload__c.field-meta.xml
<CustomField>
    <fullName>Dependent_POC_Product_Workload__c</fullName>
    <label>Dependent POC Product Workload</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>POC_Product_Workload__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>vApps</fullName>
            </value>
            <value>
                <fullName>vPC</fullName>
            </value>
            <value>
                <fullName>vWS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>