force-app/main/default/objects/POC_Request__c/fields/POC_Customer_Test_Results__c.field-meta.xml
<CustomField>
    <fullName>POC_Customer_Test_Results__c</fullName>
    <label>Customer to Provide POC Test Results</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>