force-app/main/default/objects/POC_Request__c/fields/POC_Justification__c.field-meta.xml
<CustomField>
    <fullName>POC_Justification__c</fullName>
    <label>POC Justification</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>