force-app/main/default/objects/POC_Request__c/fields/POC_Key_Contact__c.field-meta.xml
<CustomField>
    <fullName>POC_Key_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>POC Key Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>POC_Requests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>