force-app/main/default/objects/POC_Request__c/fields/POC_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>POC_Opportunity_Amount__c</fullName>
    <formula>POC_Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POC Opportunity Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>