force-app/main/default/objects/POC_Request__c/fields/POC_Opportunity_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>POC_Opportunity_Close_Date__c</fullName>
    <description>Close date on the opportunity</description>
    <formula>POC_Opportunity__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Close date on the opportunity</inlineHelpText>
    <label>POC Opportunity Close Date</label>
    <type>Date</type>
</CustomField>