force-app/main/default/objects/POC_Request__c/fields/POC_Priority_Level__c.field-meta.xml
<CustomField>
    <fullName>POC_Priority_Level__c</fullName>
    <label>POC Priority Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>