force-app/main/default/objects/POC_Request__c/fields/POC_Product_Workload__c.field-meta.xml
<CustomField>
    <fullName>POC_Product_Workload__c</fullName>
    <label>POC Product Workload</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise AI</fullName>
            </value>
            <value>
                <fullName>Edge AI</fullName>
                <label>Edge AI (Fleet Command)</label>
            </value>
            <value>
                <fullName>Data Analytics</fullName>
            </value>
            <value>
                <fullName>Remote Collab (Omniverse)</fullName>
            </value>
            <value>
                <fullName>Remote Workstation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>