force-app/main/default/objects/POC_Request__c/fields/POC_Request_Count__c.field-meta.xml
<CustomField>
    <fullName>POC_Request_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POC Request Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>