force-app/main/default/objects/POC_Request__c/fields/POC_Requested_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>POC_Requested_Start_Date__c</fullName>
    <label>POC Requested Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>