force-app/main/default/objects/POC_Request__c/fields/POC_Requests_Account__c.field-meta.xml
<CustomField>
    <fullName>POC_Requests_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>POC Requests Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>POC Requests</relationshipLabel>
    <relationshipName>POC_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>