force-app/main/default/objects/POC_Request__c/fields/Primary_POC_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Primary_POC_Objectives__c</fullName>
    <label>Primary POC Objectives</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Benchmarking</fullName>
            </value>
            <value>
                <fullName>Performance / Scalability Testing</fullName>
            </value>
            <value>
                <fullName>Product Sandboxing</fullName>
            </value>
            <value>
                <fullName>Validation Testing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>