force-app/main/default/objects/POC_Request__c/fields/Secondary_POC_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Secondary_POC_Objectives__c</fullName>
    <label>Secondary POC Objectives</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Increase Customer Value</fullName>
            </value>
            <value>
                <fullName>Increase Opportunity Value</fullName>
            </value>
            <value>
                <fullName>Increasing Key Learnings</fullName>
            </value>
            <value>
                <fullName>Increasing Purchase Commitment</fullName>
            </value>
            <value>
                <fullName>Referenceability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>