force-app/main/default/objects/POC_Request__c/fields/VM_2__c.field-meta.xml
<CustomField>
    <fullName>VM_2__c</fullName>
    <label>#VM 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 GPU</fullName>
            </value>
            <value>
                <fullName>2 GPU&apos;s</fullName>
            </value>
            <value>
                <fullName>4 GPU&apos;s</fullName>
            </value>
            <value>
                <fullName>8 GPU&apos;s</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>